# conjur-api-python

./: .codeclimate.yml  .coveragerc  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Jenkinsfile  README.md  pyproject.toml  requirements.txt  secrets.yml  setup.cfg
.github/: CODEOWNERS
ci/publish/: Dockerfile.publish  build_publish_container  is_publish_required  publish_package  run_is_publish_required  update_package_version
ci/test/: Dockerfile.test  build_test_container.sh  parse-changelog.sh  test_integration  test_linting.sh  test_unit.sh  truststore.pem
ci/testing/: .coveragerc  Dockerfile.test  build_test_container.sh  integration_test_execution.sh  test_integration  test_linting.sh  test_unit.sh
conjur_api/: __init__.py  client.py
conjur_api/errors/: __init__.py  errors.py
conjur_api/http/: api.py  endpoints.py
conjur_api/interface/: __init__.py  authentication_strategy_interface.py  credentials_store_interface.py
conjur_api/models/: __init__.py
conjur_api/providers/: __init__.py  authn_authentication_strategy.py  ldap_authentication_strategy.py  oidc_authentication_strategy.py  simple_credentials_provider.py
conjur_api/utils/: decorators.py  util_functions.py
conjur_api/wrappers/: http_wrapper.py
conjur_sdk/: __init__.py  api.py  client.py  errors.py
conjur_sdk/credentials_providers/: __init__.py  simple_credentials_provider.py
conjur_sdk/errors/: __init__.py
conjur_sdk/http/: api.py
conjur_sdk/interface/: __init__.py  credentials_store_interface.py
conjur_sdk/models/: __init__.py  create_host_data.py  create_token_data.py  credentials_data.py  list_data.py  list_members_of_data.py  resource.py  ssl_verification_metadata.py
conjur_sdk/providers/: __init__.py  simple_credentials_provider.py
conjur_sdk/ssl_utils/: ssl_context_factory.py
conjur_sdk/utils/: decorators.py  util_functions.py
conjur_sdk/wrappers/: http_wrapper.py
tests/: integration_test.cfg  unit_test.cfg
tests/authentication_strategy/: test_unit_authn_authentication_provider.py  test_unit_ldap_authentication_provider.py
tests/credentials_provider/: test_unit_simple_credentials_provider.py
tests/decorators/: test_unit_allow_sync_mode_decorator.py  test_unit_decorate_class.py
tests/https/: common.py  test_unit_client.py  test_unit_endpoints.py  test_unit_http.py  test_unit_http_ssl.py
tests/integration/: integ_utils.py  test_integration_authenticator_state.py  test_integration_vanila.py  (+2 more)
(+38 files in other folders)
