[metadata]
name = conjur_sdk
version = attr: conjur_sdk.__version__
url = https://github.com/cyberark/conjur-cli-python
project_urls =
  GitHub: repo = https://github.com/cyberark/conjur-cli-python
description = http client for cyberark conjur secrets manager
long_description = file: README.md
long_description_content_type = text/x-rst
license = Apache 2
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Framework :: AsyncIO

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.10

  Topic :: Security :: Conjur

[options]
python_requires = >=3.10.1
packages = find:
zip_safe = True
include_package_data = False

install_requires =
  cryptography~=3.3.2
  keyring>=23.0.0
  aiohttp>=3.8.1
  asynctest >= 0.13.0; python_version<"3.8"
  setuptools>=57.0.0
  urllib3>=1.25.9

[options.packages.find]
exclude =
  examples
  tests

[pep8]
max-line-length=79

[easy_install]
zip_ok = True
