[metadata]
name = conjur_api
version = attr: conjur_api.__version__
url = https://github.com/cyberark/conjur-api-python
project_urls =
  GitHub: repo = https://github.com/cyberark/conjur-api-python
description = HTTP client for CyberArk Conjur Secrets Manager
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.10

  Topic :: Security

[options]
python_requires = >=3.10.1
packages = find:
zip_safe = True
include_package_data = False

install_requires =
  cryptography~=39.0.1
  keyring>=23.0.0
  aiohttp>=3.8.1
  asynctest >= 0.13.0; python_version<"3.8"
  setuptools>=57.0.0
  urllib3>=1.25.9

[options.packages.find]
exclude =
  examples
  tests

[pep8]
max-line-length=79

[easy_install]
zip_ok = True
